<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简易计算器</string>
    <string name="title_activity_main">简易计算器</string>
    <string name="str_hint_title">温馨提示：</string>
    <string name="str_clear">c</string>
    <string name="str_delete">&lt;</string>
    <string name="str_minus">－</string>
    <string name="str_plus">＋</string>
    <string name="str_divide">÷</string>
    <string name="str_multiply">×</string>
    <string name="str_equal">＝</string>
    <string name="str_dot">·</string>
    <string name="str_num_1">1</string>
    <string name="str_num_2">2</string>
    <string name="str_num_3">3</string>
    <string name="str_num_4">4</string>
    <string name="str_num_5">5</string>
    <string name="str_num_6">6</string>
    <string name="str_num_7">7</string>
    <string name="str_num_8">8</string>
    <string name="str_num_9">9</string>
    <string name="str_num_0">0</string>

</resources>