<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_clear" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_delete" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_divide" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_num_7"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_7" />

            <Button
                android:id="@+id/btn_num_8"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_8" />

            <Button
                android:id="@+id/btn_num_9"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_9" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_num_4"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_4" />

            <Button
                android:id="@+id/btn_num_5"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_5" />

            <Button
                android:id="@+id/btn_num_6"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_num_6" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/str_plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btn_num_1"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:text="@string/str_num_1" />

                        <Button
                            android:id="@+id/btn_num_2"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:text="@string/str_num_2" />

                        <Button
                            android:id="@+id/btn_num_3"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:text="@string/str_num_3" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btn_num_0"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="2"
                            android:text="@string/str_num_0" />

                        <Button
                            android:id="@+id/btn_dot"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:text="@string/str_dot" />
                    </TableRow>
                </TableLayout>
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/str_equal" />
            </TableRow>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/calculate_value"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/keyboard"
        android:gravity="right|bottom"
        android:lines="2"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/str_num_0"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/calculate_hint_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@string/title_activity_main"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/str_hint_title"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/calculate_hint_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_hint_title"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:visibility="invisible" />

</RelativeLayout>